@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.566 2009/10/14 11:26:31 nm4 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.567 2009/10/14 13:43:40 nm4 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -102,6 +102,8 @@ NM/15 Bugzilla 854: Removed code that symlinks to pcre as its no longer useful.
 NM/16 Bugzilla 851: Documentation example syntax fix.
 
 NM/17 Changed NOTICE file to remove references to embedded PCRE.
+
+NM/18 Bugzilla 894: Fix issue with very long lines including comments in lsearch
 
 
 Exim version 4.69
